--- a/.github/workflows/sample-ci.yml
+++ b/.github/workflows/sample-ci.yml
@@ -38,6 +38,7 @@ jobs:
           echo test, and deploy your project.
           
   test:
+    needs: build
     # The type of runner that the job will run on
     runs-on: windows-latest
 
