--- a/.github/workflows/sample-ci.yml
+++ b/.github/workflows/sample-ci.yml
@@ -41,7 +41,6 @@ jobs:
         uses: actions/upload-artifact@v4.6.0
         with:
           name: test-build
-        # A file, directory or wildcard pattern that describes what to upload
           path: ${{github.workspace}}
           
   test:
@@ -63,3 +62,21 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  
+  deploy:
+    needs: test 
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    environment: 
+      name: Deploy test
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      # Runs a single command using the runners shell
+      - name: Run On windows
+        run: echo deploy!
+      
